# NREL-Collaboration

BasicDTUController/: CMakeLists.txt  README.md  git_version.txt
BasicDTUController/examples/HAWC2/DTU10MW/control/: additional_control_parameters.txt
BasicDTUController/examples/HAWC2/DTU10MW/htc/: DTU_10MW_RWT.htc
BasicDTUController/src/: Makefile  get_git_version.sh  git_version.txt
BasicDTUController/src/dtu_we_controller/: MakefileZone.Identifier  dtu_we_controller.f90  dtu_we_controller.vfproj  dtu_we_controller_fcns.f90  global_variables.f90  misc_mod.f90  turbine_controller.f90
BasicDTUController/src/dtu_we_controller_bladed/: dtu_we_controller_bladed.f90  dtu_we_controller_bladed.vfproj
DTU-10.0-LIR-OpenFAST/: Cp_Ct_Cq.txt  DISCON.IN  DTU_10MW_LIR.fst  StepWind.wnd
DTU-10.0-LIR-OpenFAST/DTU_Control/: DISCON.IN
DTU-10.0-LIR-OpenFAST/ROSCO Tune File/: DTU10MWLIR.yaml
DTU-10.0-LIR-OpenFAST/ROSCO_Control/: DTU10MWLIR.yaml
DTU-10.0-LIR-OpenFAST/control/: wpdata.100
DTU-10.0-RWT-OpenFAST/: Cp_Ct_Cq.DTU10MW.txt  DISCON.IN  DTU_10MW_RWT.fst  ReadMe.txt  StepWind.wnd  TurbSim_DTU_10MWRef.inp
DTU-10.0-RWT-OpenFAST/10MWRWT/: DISCON.IN
DTU-10.0-RWT-OpenFAST/10MWRWT/Aerodata/AeroDyn14 Airfoils/: FFA_W3_600.datZone.Identifier
DTU-10.0-RWT-OpenFAST/10MWRWT/ServoData/: dtu_we_controller.f90  dtu_we_controller_bladed.f90  safety_system.f90  turbine_controller.f90
DTU-10.0-RWT-OpenFAST/BModes/: DTU_10MW_Blade_bmode.bmi  DTU_10MW_Tower_bmode.bmi
DTU-10.0-RWT-OpenFAST/DTU_Control/: DISCON.IN
DTU-10.0-RWT-OpenFAST/ROSCO Tune File/: DTU10MW.yaml
DTU-10.0-RWT-OpenFAST/ROSCO_Control/: DISCON.IN
DTU-10.0-RWT-OpenFAST/Uniform_4mps/: DISCON.IN  DTU_10MW_RWT.fst
DTU-10.0-RWT-OpenFAST/control/: wpdata.100
DTUWEController/: ci.py
DTUWEController/src/: MakefileZone.Identifier  dtu_controller.sln  git_version.txt  tmp - Copy.txt
DTUWEController/src/dtu_we_controller/: CMakeLists.txt  dtu_we_controller_fcns.f90  git_version.inc  turbine_controller.f90
DTUWEController/src/dtu_we_controller_bladed/: CMakeLists.txt  MakefileZone.Identifier
DTUWEController/src/modules/: CMakeLists.txt  global_variables.f90  user_defined_types.f90
DTU_10MW_RWT/: DTU_RWT.fst
DTU_10MW_RWT/ROSCO_Control/: DISCON.IN  DTU10MW.yaml
IEA-10.0-RWT-OpenFAST/: Cp_Ct_Cq.txt  DISCON.IN  IEA-10.0-198-RWT.fst  IEA-10.0-198-RWT_DISCON.IN  StepWind.wnd
IEA-10.0-RWT-OpenFAST/DTU_Control/: DISCON.IN
IEA-10.0-RWT-OpenFAST/ROSCO_Control/: DISCON.IN  IEA10MW.yaml
IEA-10.0-RWT-OpenFAST/control/: wpdata.100
ROSCO_new/src/: Controllers.f90  ReadSetParameters.f90
ROSCO_toolbox/: tune_ROSCO.py
ROSCO_toolbox/ROSCO_toolbox/: turbine.py
ROSCO_toolbox/Tune_Cases/: DTU10MW.yaml
ROSCO_toolbox/rosco_toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
utils/: README.md
